<resources>
    <string name="app_name">Facebook_TimeLine</string>
    <string name="unblast">Unblast</string>
    <string name="_2_hrs">2 hrs .</string>
    <string name="buckle_up_because_change_is_coming_to_wordpress">Buckle Up, Because change is coming to WordPress</string>
    <string name="todo">TODO</string>
    <string name="_1_share">1 Share</string>
    <string name="facebook">Facebook</string>
    <string name="http_unblast_com_color_schemes">http:/unblast.com/color-schemes</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
</resources>