<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:src="@drawable/baseline_circle_24"
        app:civ_border_width="2dp"
        app:civ_border_color="#ECEDE1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/unblast"/>
    <TextView
        android:id="@+id/underProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        android:layout_marginStart="10dp"
        android:text="@string/_2_hrs"
   />
    <ImageView
        android:id="@+id/worldballiconimage"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toEndOf="@id/underProfileName"
        android:src="@drawable/world_icon"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/writeOfPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        tools:text="@string/buckle_up_because_change_is_coming_to_wordpress"
        android:textColor="@color/black"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/underWriteOfPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/writeOfPost"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:text="@string/http_unblast_com_color_schemes"
        android:textColor="#3F51B5"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/underWriteOfPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo"
        android:layout_marginTop="10dp"
        android:src="@drawable/yellowimage"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="15dp"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/arrow2"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/besideArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_circle_24"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintEnd_toStartOf="@id/arrow"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/besideimagebesidearrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintEnd_toStartOf="@id/besideArrow"
        android:layout_marginTop="13dp"
        android:text="@string/_1_share"
        android:layout_marginEnd="5dp"
        android:textSize="15sp"/>
    <ImageView
        android:id="@+id/likeimage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage"
        android:scaleType="fitXY"
        android:layout_marginTop="13dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo" />
<TextView
    android:id="@+id/numOfLikes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/postImage"
    app:layout_constraintStart_toEndOf="@id/likeimage"
    android:layout_marginTop="13dp"
    android:layout_marginStart="5dp"
    android:textColor="@color/black"
    android:textSize="15sp"
    tools:text="10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/likeBtn"
        android:layout_width="100dp"
        android:padding="10dp"
        android:text="@string/like"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/besideArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/commentBtn"
        android:drawableStart="@drawable/like2"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commentBtn"
        android:layout_width="100dp"
        android:text="@string/comment"
        android:padding="5dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/besideArrow"
        app:layout_constraintStart_toEndOf="@id/likeBtn"
        app:layout_constraintEnd_toStartOf="@id/shareBtn"
        android:drawableStart="@drawable/commenticon"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareBtn"
        android:layout_width="100dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/besideArrow"
        app:layout_constraintStart_toEndOf="@id/commentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/share"
        android:drawableStart="@drawable/share"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>